--- a/Selection effect/style.css
+++ b/Selection effect/style.css
@@ -3,6 +3,16 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.list > * {
+    scroll-snap-align: start;
+}
+
+.item img{
+    height: 40vh;
+    width: 8vw;
+    min-width: 90px;
+}
 .list {
     display: flex;
     flex-wrap: nowrap;
@@ -11,22 +21,60 @@ body {
     overflow-x: auto;
     overflow-y: hidden;
     gap: 0.5rem;
-    /* gap: 2%; */
     scroll-snap-type: x mandatory;
     justify-content: center;
-}
+    margin-top: 200px;
 
-/* .list > * {
-    scroll-snap-align: start;
-} */
 
-.item{
+
+
+
+
+
     
+    transform-style: preserve-3d;
+    perspective: 2600px;
+
 }
 
-.item img{
-    height: 40vh;
-    width: 9vw;
-    /* margin: 6px; */
-    min-width: 90px;
+
+.list .item{
+  transition: 0.5s;
+  filter: brightness(0);
+  transform: translateZ(0);  
+}
+
+.list .item:hover {
+    filter: brightness(1);
+    transform: translateZ(200px);
+}
+
+/* .list .item:hover + .item {    or */
+.list .item:hover + *{
+    filter: brightness(0.6);
+    transform: translateZ(150px) rotateY(40deg)
+}
+.list .item:hover + * + *{
+ filter: brightness(0.4);
+ transform: translateZ(70px) rotateY(20deg);
+}
+
+.list .item:hover + * + * + *{
+    filter: brightness(0.2);
+    transform: translateZ(30px) rotateY(10deg);
+}
+
+.list .item:has(+*:hover){
+    filter: brightness(0.6);
+    transform: translateZ(150px) rotateY(-40deg)
+}
+
+.list .item:has(+*+*:hover){
+    filter: brightness(0.4);
+    transform: translateZ(70px) rotateY(-20deg)
+}
+
+.list .item:has(+*+*+*:hover){
+    filter: brightness(0.2);
+    transform: translateZ(30px) rotateY(-10deg)
 }
